--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -18,13 +18,14 @@
   
   .headerTitleLg {
     position: absolute;
-    top: 20%;
+    top: 15%;
     font-size: 100px;
+    font-weight: bold;
   }
   
   .headerImg {
     width: 100%;
     height: 450px;
-    margin-top: 80px;
+    margin-top: 190px;
     object-fit: cover;
   }
