--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -43,35 +43,50 @@
     outline: lightgray;
   }
   
-  .loginButton {
-    margin-top: 40px;
-    cursor: pointer;
-    background-color: rgb(28, 190, 223);
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    text-align: center;
-    padding: 10px;
-    align-self: center;
-    border-radius: 30px;
-    width: 5%;
-    font-weight: bold;
+  
+.btnLogin{
+  background-color: #0078d0;
+  border: 0;
+  border-radius: 56px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  outline: 0;
+  padding: 16px 21px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-top: 20px;
+  padding-top: 15px;
+  margin-left: 10px;
+  width: 10%;
+  align-self: center;
   }
-  .loginButton:hover {
-    margin-top: 40px;
-    cursor: pointer;
-    background-color: rgb(28, 190, 223);
-    color: black;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    text-align: center;
-    padding: 10px;
-    align-self: center;
-    border-radius: 30px;
-    width: 5%;
-    font-weight: bold;
+  
+  .btnLogin:before {
+    background-color: initial;
+    background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+    border-radius: 125px;
+    content: "";
+    height: 50%;
+    left: 4%;
+    opacity: .5;
+    position: absolute;
+    top: 0;
+    transition: all .3s;
+    width: 92%;
+  }
+  
+  .btnLogin:hover {
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
   }
   
   .loginRegisterButton {
@@ -143,4 +158,5 @@
     border-radius: 10px;
   }
   }
-  
+
+    
