--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     font-family: "Lora", serif;
-    color: #444;
+    color: #0078d0;
   }
   
   .headerTitleSm {
@@ -25,7 +25,7 @@
   
   .headerImg {
     width: 100%;
-    height: 450px;
-    margin-top: 190px;
+    height: 500px;
+    margin-top: 160px;
     object-fit: cover;
   }
