--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -2,14 +2,13 @@
     height: calc(100vh - 50px);
     margin:auto;
     text-align: center;
-    margin-top: 40px;
     position:relative;
     background-image:url("https://fulisbutik.com/wp-content/uploads/2019/01/login-background-images-for-website-10.jpg");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 810px;
 }
   
   .loginTitle {
@@ -87,6 +86,7 @@
   .btnLogin:hover {
     box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
     transform: scale(1.05);
+    color:gray;
   }
   
   .loginRegisterButton {
