--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -1,119 +1,161 @@
 .register {
-    height: calc(90vh - 50px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 60px;
-    justify-content: center;
+  margin:auto;
+  text-align: center;
+  position:relative;
+  background-image:url("https://fulisbutik.com/wp-content/uploads/2019/01/login-background-images-for-website-10.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  width: 100%;
+  height: 810px;
+}
+
+.registerTitle {
+  font-size: 65px;
+  color: rgb(28, 190, 223);
+  font-weight: bold;
+}
+
+.registerForm {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.registerForm > label {
+  margin: 10px 0;
+  font-weight: bold;
+  color: white;
+}
+
+.registerInput {
+  padding: 10px;
+  background-color: white;
+  border: none;
+  align-self: center;
+  border-radius: 10px;
+  width: 15%;
+}
+
+.registerInput:focus {
+  outline: lightgray;
+}
 
 
-  }
-  
-  .registerTitle {
-    font-size: 50px;
-  }
-  
-  .registerForm {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .registerForm > label {
-    margin: 10px 0;
-  }
-  
-  .registerInput {
-    padding: 10px;
-    background-color: white;
-    border-radius: 10px;
-    border-top-style: hidden;
-    border-style: ridge;
-  }
-  
-  .registerInput:focus {
-    outline: none;
-  }
-  
-  .registerButton {
-    margin-top: 20px;
-    cursor: pointer;
-    background-color: teal;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    text-align: center;
-  }
-  
-  .registerLoginButton {
-    position: absolute;
-    top: 60px;
-    right: 20px;
-    background-color: lightcoral;
-    cursor: pointer;
-    padding: 10px;
-    border: none;
-    color: white;
-    border-radius: 10px;
-  }
-  @media screen and (max-width: 992px) {
-    .register {
-      height: calc(90vh - 50px);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 60px;
-      justify-content: center;
+.btnRegister{
+background-color: #0078d0;
+border: 0;
+border-radius: 56px;
+color: #fff;
+cursor: pointer;
+display: inline-block;
+font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+font-size: 18px;
+font-weight: 600;
+outline: 0;
+padding: 16px 21px;
+position: relative;
+text-align: center;
+text-decoration: none;
+transition: all .3s;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+margin-top: 20px;
+padding-top: 15px;
+margin-left: 10px;
+width: 10%;
+align-self: center;
+}
 
-    }
-    
-    .registerTitle {
-      font-size: 50px;
-    }
-    
-    .registerForm {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-    }
-    
-    .registerForm > label {
-      margin: 10px 0;
-    }
-    
-    .registerInput {
-      padding: 10px;
-      background-color: white;
-      border: none;
-      border-radius: 10px;
-    }
-    
-    .registerInput:focus {
-      outline: none;
-    }
-    
-    .registerButton {
-      margin-top: 20px;
-      cursor: pointer;
-      background-color: teal;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
-      text-align: center;
-    }
-    
-    .registerLoginButton {
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background-color: lightcoral;
-      cursor: pointer;
-      padding: 10px;
-      border: none;
-      color: white;
-      border-radius: 10px;
-    }
-    
-    }
+.btnRegister:before {
+  background-color: initial;
+  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+  border-radius: 125px;
+  content: "";
+  height: 50%;
+  left: 4%;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  transition: all .3s;
+  width: 92%;
+}
+
+.btnRegister:hover {
+  box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  transform: scale(1.05);
+  color:gray;
+}
+
+.registerRegisterButton {
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: teal;
+  cursor: pointer;
+  padding: 10px;
+  border: none;
+  color: white;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 992px) {
+.register {
+  height: calc(100vh - 50px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.registerTitle {
+  font-size: 50px;
+}
+
+.registerForm {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.registerForm > label {
+  margin: 10px 0;
+}
+
+.registerInput {
+  padding: 10px;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
+}
+
+.registerInput:focus {
+  outline: none;
+}
+
+.registerButton {
+  margin-top: 20px;
+  cursor: pointer;
+  background-color: lightcoral;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.registerRegisterButton {
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: teal;
+  cursor: pointer;
+  padding: 10px;
+  border: none;
+  color: white;
+  border-radius: 10px;
+}
+}
+
+  
