--- a/client/src/pages/write/write.css
+++ b/client/src/pages/write/write.css
@@ -1,14 +1,28 @@
 .write {
-    padding-top: 50px;
+  height: calc(100vh - 150px);
+  margin:auto;
+  text-align: center;
+  position:relative;
+  background-image:url("https://www.bondora.com/blog/wp-content/uploads/saving-money.png");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  width: 100%;
   }
   
 .container-fluid{
   padding: 30px;
   margin-right: 200px;
 }
-  
+.writeTitle {
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+}
   .writeForm {
-    position: relative;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
   }
   
   .writeFormGroup {
@@ -31,19 +45,23 @@
   }
   
   .writeInput {
-    font-size: 30px;
+    padding: 10px;
+    background-color: white;
     border: none;
-    padding: 20px;
-    width: 70vw;
+    align-self: center;
+    border-radius: 10px;
+    width: 15%;
+    margin-right: 10px;
   }
   
   .writeInput::placeholder {
     color: rgb(189, 185, 185);
     font-weight: 400;
+    font-size: 20px;
   }
   
   .writeInput:focus {
-    outline-style: none;
+    outline: lightgray;
   }
   
   .writeText {
@@ -54,88 +72,51 @@
   }
   
   .writeSubmit {
-    position: absolute;
-    top: 20px;
-
-    color: white;
-    background-color: teal;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    font-size: 16px;
+    background-color: #0078d0;
+    border: 0;
+    border-radius: 56px;
+    color: #fff;
     cursor: pointer;
-    display: flex;
-    align-items: center;
+    display: inline-block;
+    font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    outline: 0;
+    padding: 16px 21px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: all .3s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-top: 20px;
+    padding-top: 15px;
+    margin-left: 10px;
+    width: 10%;
+    align-self: center;
   }
-  @media screen and (max-width: 992px) {
-    .write {
-      padding-top: 50px;
-    }
+  .writeSubmit:before {
+    background-color: initial;
+    background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+    border-radius: 125px;
+    content: "";
+    height: 50%;
+    left: 4%;
+    opacity: .5;
+    position: absolute;
+    top: 0;
+    transition: all .3s;
+    width: 92%;
+  }
+  
+  .writeSubmit:hover {
+    box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+    transform: scale(1.05);
+    color:gray;
+  }
     
   .container-fluid{
     padding: 30px;
     margin-right: 200px;
   }
-    
-    .writeForm {
-      position: relative;
-    }
-    
-    .writeFormGroup {
-      margin-left: 150px;
-      display: flex;
-      align-items: center;
-    }
-    
-    .writeIcon {
-      width: 25px;
-      height: 25px;
-      font-size: 20px;
-      border: 1px solid;
-      border-radius: 50%;
-      color: rgb(129, 125, 125);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
-    
-    .writeInput {
-      font-size: 30px;
-      border: none;
-      padding: 20px;
-      width: 70vw;
-    }
-    
-    .writeInput::placeholder {
-      color: rgb(189, 185, 185);
-      font-weight: 400;
-    }
-    
-    .writeInput:focus {
-      outline-style: none;
-    }
-    
-    .writeText {
-      width: 70vw;
-      height: 100vh;
-      font-family: inherit;
-      font-size: 20px;
-    }
-    
-    .writeSubmit {
-      position: absolute;
-      top: 20px;
-  
-      color: white;
-      background-color: teal;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-    }
-  
-    }
