--- a/client/src/components/cost/cost.css
+++ b/client/src/components/cost/cost.css
@@ -1,11 +1,20 @@
 
 .cost {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    display: inline-block;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+}
+.cost > p {
+  margin: 10px 0;
+  font-weight: bold;
+  color: black;
+}
+.cost > span {
+  margin: 10px 0;
+  color: black;
 }
 .costTitle{
-  font-family: "Josefin Sans", sans-serif;
   font-size: 30px;
+    color: #0078d0;
+    font-weight: bold;
 }
