--- a/client/src/pages/popup/customPopUp.css
+++ b/client/src/pages/popup/customPopUp.css
@@ -6,10 +6,9 @@
   justify-content: space-between;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  width: 100%;
   align-items: center;
   text-align: center;
-  padding: 20px 119px;
+  padding: 20px 119px 10px;
 }
   .cp-hd {
     font-size: 16px;
@@ -27,7 +26,7 @@
     padding-top: 4px;
   }
   .popup-instruct {
-    margin-bottom: 15px;
+    margin-bottom: -15px;
     margin-top: 9px;
   }
   .popup {
@@ -67,7 +66,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0 2px 4px 0 rgb(195 194 194 / 70%);
-  font-size: 15px;
+  font-size: 20px;
   padding: 10px;
   row-gap: 22px;
 }
