--- a/client/src/pages/reports/reports.css
+++ b/client/src/pages/reports/reports.css
@@ -8,12 +8,15 @@
     background-size: cover;
     width: 100%;
     height: 810px;
+    display:flex;
+    flex-direction: row-reverse;
 }
 .reportTitle {
-    font-size: 30px;
-    color: black;
-    font-weight: bold;
-  }
+  font-size: 30px;
+  color: black;
+  margin-left: 30px;
+  font-weight: bold;
+}
 .reportForm {
     margin-top: 25px;
     display: flex;
@@ -22,7 +25,7 @@
 .reportForm > label {
     margin: 10px 0;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 .reportForm > input {
     padding: 10px;
@@ -30,7 +33,7 @@
     border: none;
     align-self: center;
     border-radius: 10px;
-    width: 15%;
+    width: 80%;
   }
   .reportForm > select {
     padding: 10px;
@@ -38,7 +41,7 @@
     border: none;
     align-self: center;
     border-radius: 10px;
-    width: 15%;
+    width: 80%;
   }
   
   .reportForm > input:focus {
@@ -66,7 +69,7 @@
     margin-top: 20px;
     padding-top: 15px;
     margin-left: 10px;
-    width: 10%;
+    width: 50%;
     align-self: center;
     }
     
@@ -81,7 +84,6 @@
       position: absolute;
       top: 0;
       transition: all .3s;
-      width: 92%;
     }
     
     .btnReport:hover {
